<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CustomersMapActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"/>

        <Button
            android:id="@+id/customer_call_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/call_a_car"
            android:textAlignment="center" />

    </RelativeLayout>
    <Button
        android:id="@+id/customer_logout_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        android:layout_marginEnd="7dp"
        android:text="@string/Logout" />

    <Button
        android:id="@+id/customer_settimg_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/setting"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        />

</RelativeLayout>

